--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,28 @@
 		</dependency>
 	</dependencies>
 
+	<profiles>
+		<profile>
+			<id>dev</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<adresse-bdd>localhost:3306</adresse-bdd>
+				<nom-bdd>kempo_L17</nom-bdd>
+			</properties>
+		</profile>
+
+	</profiles>
+
 	<build>
+		<resources>
+			<resource>
+				<filtering>true</filtering>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
+
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
