--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 spring.application.name=kempo
-spring.datasource.url=jdbc:mysql://localhost:3306/kempo_L17?serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://@adresse-bdd@/@nom-bdd@?serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto = create
+
+spring.sql.init.platform = donnees-de-test
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode = always
