--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=kempo
 spring.datasource.url=jdbc:mysql://@adresse-bdd@/@nom-bdd@?serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=@password-bdd@
 
 spring.jpa.hibernate.ddl-auto = create
 
